# ro-scaling-risk

./: .gitignore  README.md  app.py  pyproject.toml
copernicus/: fetcher.py
core/: ro_concentration.py  scaling_indices.py  water_chemistry.py
outputs/: risk_report.py
