[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ro-scaling-risk"
version = "0.1.0"
description = "Scaling risk estimator for RO membranes using Copernicus data"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "pandas",
    "copernicusmarine",
    "xarray",
    "jupyter",
]

[tool.setuptools]
packages = ["copernicus", "core", "outputs"]